# SPH-CUDA

./: CMakeLists.txt  README.md  main.cu
include/: config.h  grid.h  kernels.h  particle.h  renderer.h
python/: req.txt
src/: kernels.cu  main.cu  renderer.cu
